# mindsweeper

./: AUTHOR  Makefile.am  README.md  TODO  configure.ac  cool_games.txt  main.c  mindsweeper.c  mindsweeper.desktop  mindsweeper.spec.in  minefield.c  minefield.h  solver.c  solver.h  ui.c
html/: index.html
pixmaps/: Makefile.am  about.xpm  gameover.xpm  guess.xpm  mf_boom.xpm  mf_mined.xpm  mf_wrong.xpm  noanalysis.xpm  stopped.xpm
pixmaps/counters/mindsweeper/: Makefile.am  digit_3.xpm  digit_4.xpm  digit_6.xpm  digit_7.xpm  digit_9.xpm
pixmaps_source/: about.xcf  boom.xcf  digit_0.pcx  digit_1.pcx  digit_2.pcx  digit_3.pcx  digit_4.pcx  digit_5.pcx  digit_6.pcx  digit_7.pcx  digit_8.pcx  digit_9.pcx  digits.xcf  gameover.xcf  guess.xcf  mined.xcf  noguess.xcf  perigo2.pcx  searching.xcf  status.xcf  stopped.xcf  toomany.xcf
pixmaps_source/counters/57chevy/: digit_0.xpm  digit_1.xpm  digit_2.xpm  digit_3.xpm  digit_4.xpm  digit_5.xpm  digit_6.xpm  digit_7.xpm  digit_8.xpm  digit_9.xpm
pixmaps_source/counters/arabic/: digit_0.xpm  digit_1.xpm  digit_2.xpm  digit_3.xpm  digit_4.xpm  digit_5.xpm  digit_6.xpm  digit_7.xpm  digit_8.xpm  digit_9.xpm
pixmaps_source/counters/atari8/: digit_0.xpm  digit_1.xpm  digit_2.xpm  digit_3.xpm  digit_4.xpm  digit_5.xpm  digit_6.xpm  digit_7.xpm  digit_8.xpm  digit_9.xpm
pixmaps_source/counters/bangko/: digit_0.xpm  digit_1.xpm  digit_2.xpm  digit_3.xpm  digit_4.xpm  digit_5.xpm  digit_6.xpm  digit_7.xpm  digit_8.xpm  digit_9.xpm
pixmaps_source/counters/braille/: digit_0.xpm  digit_1.xpm  digit_2.xpm  digit_3.xpm  digit_4.xpm  digit_5.xpm  digit_6.xpm  digit_7.xpm  digit_8.xpm  digit_9.xpm
pixmaps_source/counters/cb/: digit_0.xpm  digit_1.xpm  digit_2.xpm  digit_3.xpm  digit_4.xpm  digit_5.xpm  digit_6.xpm  digit_7.xpm  digit_8.xpm  digit_9.xpm
pixmaps_source/counters/cchess/: digit_0.xpm  digit_1.xpm  digit_2.xpm  digit_3.xpm  digit_4.xpm  digit_5.xpm  digit_6.xpm  digit_7.xpm  digit_8.xpm  digit_9.xpm
pixmaps_source/counters/chinese/: digit_0.xpm  digit_1.xpm  digit_2.xpm  (+7 more)
src/: .gitignore  00init.sh  ChangeLog  Makefile.am  README  configure.ac  main.c  mindsweeper.c  mindsweeper.h  minefield.c  minefield.h  solver.c  solver.h  ui.c  ui.h
src/desktop/: Makefile.am
src/gnuscripts/: depend
src/pixmaps/: Makefile.am  mf_flagged.xpm  noguess.xpm  searching.xpm
src/pixmaps/counters/: Makefile.am
src/pixmaps/counters/mindsweeper/: digit_0.xpm  digit_1.xpm  digit_2.xpm  digit_5.xpm  digit_8.xpm
(+31 files in other folders)
