SUBDIRS = counters

# FIXME:  the .xpm's are really source files for mindsweeper and should
# probablybe listed in its SOURCES directive

EXTRA_DIST = about.xpm mf_boom.xpm mf_wrong.xpm noguess.xpm gameover.xpm mf_flagged.xpm mindsweeper.png searching.xpm guess.xpm mf_mined.xpm noanalysis.xpm stopped.xpm
